--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <html>
     <head>
-      <script src="index.js"></script>
+      <script defer src="index.js"></script>
     </head>
     <body>
-      <h1> CODE YOUR SOLUTION </h1>      
+      <h1> Todos </h1>   
+      <hr>
+      <form id="todo-form">
+        <input type="text" id="todo-input" placeholder="Type a to-do">
+        <input type="submit" value="Submit" />
+      </form>
+      <p class ="error-message" id="error-message"></p>
+      <ul
+        id="todo-list">
+      </ul>
     </body>
 </html>
+      
+
+    
+
